--- a/assets/stylesheets/pages/_beers.scss
+++ b/assets/stylesheets/pages/_beers.scss
@@ -3,7 +3,7 @@
     height: 100vh;
 
     .swiper-container {
-        height: 100%;
+        height: 90%;
         background-image: url('../../assets/images/beer-vector-texture.png');
         background-position: center;
         background-repeat: repeat-x;
@@ -31,6 +31,7 @@
     .swiper-slide {
         display: flex;
         align-items: center;
+        margin-top: 4rem;
     }
 
 /*
