--- a/assets/stylesheets/blocs/_footer.scss
+++ b/assets/stylesheets/blocs/_footer.scss
@@ -41,8 +41,11 @@
             margin-top: 0;
         }
 
-        .button {
-            min-width: 14rem;
+        .newsletter-field-container {
+            .button {
+                height: 4.6rem;
+                min-width: 14rem;
+            }
         }
     }
 
