--- a/assets/stylesheets/pages/_shop.scss
+++ b/assets/stylesheets/pages/_shop.scss
@@ -14,16 +14,25 @@
     }
 }
 
-
-
 .products-wrapper {
-    margin-top: 4rem; 
+    margin-top: 4rem;
 
     .products-grid {
+        .row > div {
+            padding-right: 8px;
+            padding-left: 8px;
+            margin-bottom: 2rem;
+        }
+
         .product-container {
+            position: relative;
             height: 100%;
-            padding-bottom: 2rem;
             overflow: hidden;
+
+            &:hover .quantity-wrapper {
+                visibility: visible;
+                bottom: 0;
+            }
 
             .product-link {
                 color: inherit;
@@ -32,7 +41,7 @@
                 user-select: none;
 
                 &:hover .product-content {
-                    background-color: rgba($dark, .15);                
+                    background-color: rgba($dark, 0.15);
                 }
 
                 &:hover .sale-product-price {
@@ -44,10 +53,10 @@
                 }
 
                 .product-content {
-                    @include transition(all, .2);
+                    @include transition(all, 0.2);
                     position: relative;
                     background-color: $gray-5;
-                    background-image: url('../images/shop-bg-texture.svg');
+                    background-image: url("../images/shop-bg-texture.svg");
                     background-position: center;
                     background-size: cover;
                     width: 100%;
@@ -59,7 +68,8 @@
                         margin-bottom: 1.5rem;
                     }
 
-                    .product-price, .sale-product-price {
+                    .product-price,
+                    .sale-product-price {
                         margin-bottom: 1rem;
                         letter-spacing: 0.08em;
                         font-size: 1.6rem;
@@ -74,7 +84,6 @@
                         height: 60%;
                         width: 70%;
                         z-index: 1;
-
 
                         img {
                             max-height: 100%;
@@ -95,7 +104,6 @@
                 }
             }
 
-
             .new-product {
                 &-banner {
                     position: absolute;
@@ -106,9 +114,9 @@
                 }
 
                 &-label {
-                    @include transition(all, .2);
+                    @include transition(all, 0.2);
                     font-size: 12rem;
-                    opacity: .06;
+                    opacity: 0.06;
                 }
             }
 
@@ -122,7 +130,7 @@
                     background-color: $gray-3;
                     padding: 1.8rem;
                     z-index: 3;
-                    opacity: .3;
+                    opacity: 0.3;
                 }
 
                 &-label {
@@ -141,27 +149,34 @@
                     text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
                 }
                 &-previous-price {
-                    color: rgba($dark, .3);
+                    color: rgba($dark, 0.3);
                     text-decoration: line-through;
                     padding-left: 1rem;
                     margin-bottom: 1rem;
                     font-family: $font-family-sans-serif;
                 }
             }
+
+            .quantity-wrapper {
+                @include transition();
+                visibility: visible;
+                bottom: 0;
+
+                @include desktop {
+                    visibility: hidden;
+                    bottom: -5rem;
+                }
+            }
         }
     }
 }
-
-
 
 /* -------- CUSTOM BEER COLORS ----------- */
 
 @each $beer, $color in $beer-colors {
     .product-#{$beer} {
-        .product-link {
-            &:hover .product-content {
-                background-color: rgba($color, .6) !important;                
-            }
+        &:hover .product-content {
+            background-color: rgba($color, 0.6) !important;
         }
     }
 }
