--- a/assets/stylesheets/pages/_shop.scss
+++ b/assets/stylesheets/pages/_shop.scss
@@ -48,10 +48,6 @@
                     text-shadow: 1px 1px 1px rgba(260, 260, 260, 0.45);
                 }
 
-                &:hover .new-product-label {
-                    //color: $gray-5;
-                }
-
                 .product-content {
                     @include transition(all, 0.2);
                     position: relative;
@@ -76,10 +72,8 @@
                     }
 
                     .product-image {
+                        @include position(absolute, null, 50%, 6.5rem);
                         display: flex;
-                        position: absolute;
-                        bottom: 6.5rem;
-                        left: 50%;
                         transform: translateX(-50%);
                         height: 60%;
                         width: 70%;
@@ -106,9 +100,7 @@
 
             .new-product {
                 &-banner {
-                    position: absolute;
-                    top: 10rem;
-                    left: 0;
+                    @include position(absolute, 10rem, 0);
                     width: 100%;
                     z-index: 0;
                 }
@@ -122,15 +114,13 @@
 
             .soldout-product {
                 &-banner {
-                    position: absolute;
-                    bottom: 0rem;
-                    left: 0;
+                    @include position(absolute, null, 0, 0);
+                    background-color: $gray-3;
                     width: 100%;
                     height: 5rem;
-                    background-color: $gray-3;
+                    opacity: 0.3;
                     padding: 1.8rem;
                     z-index: 3;
-                    opacity: 0.3;
                 }
 
                 &-label {
@@ -150,10 +140,10 @@
                 }
                 &-previous-price {
                     color: rgba($dark, 0.3);
-                    text-decoration: line-through;
-                    padding-left: 1rem;
-                    margin-bottom: 1rem;
                     font-family: $font-family-sans-serif;
+                    margin-bottom: 1rem;
+                    padding-left: 1rem;
+                    text-decoration: line-through;
                 }
             }
 
