add shopping cart top button

--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -6,95 +6,120 @@ Praxis Logo & Burguer Menu
 
 .menu {
     .navbar {
-        @include position(fixed, 0, 0);
-        display: flex;
-        z-index: 20;
-
-        .navbar-brand {
-            background-color: $black;
-            position: relative;
-            width: $navbar-height * 2;
-            height: $navbar-height;
-            padding: 2.5rem 3.4rem;
+        .brand-container {
+            @include position(fixed, 0, 0);
+            display: flex;
             z-index: 20;
 
-            img {
-                max-width: 100%;
+            .navbar-brand {
+                background-color: $black;
+                width: $navbar-height * 2;
+                height: $navbar-height;
+                padding: 2.5rem 3.4rem;
+
+                img {
+                    max-width: 100%;
+                }
             }
-        }
 
-        .burger-menu {
-            background-color: $white;
-            display: inline-block;
-            position: relative;
-            height: $navbar-height;
-            width: $navbar-height;
-            z-index: 20;
+            .burger-menu {
+                background-color: $white;
+                position: relative;
+                height: $navbar-height;
+                width: $navbar-height;
+                z-index: 20;
 
-            &:hover {
-                @include transition(all, 0.4);
+                &:hover {
+                    @include transition(all, 0.4);
+
+                    .bar {
+                        @include transition(all, 0.3);
+                        width: 4.5rem;
+
+                        &:before {
+                            @include transition(all, 0.4);
+                            width: 4.5rem;
+                        }
+                    }
+                }
 
                 .bar {
                     @include transition(all, 0.3);
-                    width: 4.5rem;
+                    margin: auto 2.2rem;
+                    width: 3rem;
+
+                    &,
+                    &::before,
+                    &::after {
+                        content: "";
+                        @include position(absolute, 50%, 0);
+                        @include transition(transform, 0.4);
+                        background: $black;
+                        height: 3px;
+                    }
 
                     &:before {
                         @include transition(all, 0.4);
-                        width: 4.5rem;
-                    }
-                }
-            }
-
-            .bar {
-                @include transition(all, 0.3);
-                margin: auto 2.2rem;
-                width: 3rem;
-
-                &,
-                &::before,
-                &::after {
-                    content: "";
-                    @include position(absolute, 50%, 0);
-                    @include transition(transform, 0.4);
-                    background: $black;
-                    height: 3px;
-                }
-
-                &:before {
-                    @include transition(all, 0.4);
-                    width: 4rem;
-                    top: -1rem;
-                }
-
-                &:after {
-                    width: 4.5rem;
-                    top: 1rem;
-                }
-
-                &:before,
-                &:after {
-                    transform: rotate(0deg);
-                }
-            }
-
-            &.active {
-                .bar {
-                    background: 0;
-
-                    &:before {
-                        width: 4.5rem;
-                        transform: rotate(45deg);
+                        width: 4rem;
+                        top: -1rem;
                     }
 
                     &:after {
-                        transform: rotate(-45deg);
+                        width: 4.5rem;
+                        top: 1rem;
                     }
 
                     &:before,
                     &:after {
-                        top: 0;
+                        transform: rotate(0deg);
                     }
                 }
+
+                &.active {
+                    .bar {
+                        background: 0;
+
+                        &:before {
+                            width: 4.5rem;
+                            transform: rotate(45deg);
+                        }
+
+                        &:after {
+                            transform: rotate(-45deg);
+                        }
+
+                        &:before,
+                        &:after {
+                            top: 0;
+                        }
+                    }
+                }
+            }
+        }
+
+        .shopping-menu {
+            @include position(fixed, 0, null, null, 0);
+            background-color: $black;
+            width: $navbar-height;
+            height: $navbar-height;
+            padding: 3rem;
+            z-index: 10;
+
+            &.filled-cart {
+                &:after {
+                    content: '';
+                    @include position(absolute, 2.2rem, null, null, 2rem);
+                    width: 1.6rem;
+                    height: 1.6rem;
+                    background-color: $white;
+                    border: 2px solid $black;
+                    border-radius: 50%;
+                    z-index: 11;
+                }
+            }
+
+            .shopping-cart-icon {
+                width: 100%;
             }
         }
     }
