finished cart modal

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -26,6 +26,8 @@
 'blocs/db-title',
 'blocs/swiper-slide',
 'blocs/gallery',
+'blocs/cart-modal',
+'blocs/cart-item',
 
 'pages/beers',
 'pages/single-beer',
