--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -111,8 +111,8 @@ Praxis Logo & Burguer Menu
                     @include position(absolute, 2.2rem, null, null, 2rem);
                     width: 1.6rem;
                     height: 1.6rem;
-                    background-color: $white;
-                    border: 2px solid $black;
+                    background-color: $gold;
+                    border: 3px solid $black;
                     border-radius: 50%;
                     z-index: 11;
                 }
