--- a/assets/stylesheets/blocs/_cart-item.scss
+++ b/assets/stylesheets/blocs/_cart-item.scss
@@ -8,19 +8,22 @@
     }
 
     &-thumbnail {
-        width: 10rem;
         border-right: 1px solid $gray-4;
-        padding: 2rem 1.5rem;
+        width: 10rem;
         max-height: 15rem;
+        display: flex;
+        align-items: center;
+        padding: 2rem 1.5rem;
 
         @include tablet {
-            padding: 2.5rem 3rem 2rem 3rem;
-            max-height: auto;
+            padding: 2.5rem 2rem 1.5rem 2rem;
+            max-height: inherit;
         }
 
         img {
             width: 100%;
             height: 100%;
+            max-height: 8rem;
             object-fit: contain;
         }
     }
