--- a/assets/stylesheets/blocs/_cart-modal.scss
+++ b/assets/stylesheets/blocs/_cart-modal.scss
@@ -74,11 +74,11 @@
             overflow: auto;
 
             @include tablet {
-                margin: 2rem 3rem;
+                margin: 0 3rem 2rem 3rem;
             }
 
             @include desktop {
-                margin: 2rem 5rem;
+                margin: 0rem 5rem 2rem 5rem;
             }
         }
 
