Add back link, improve responsive header

--- a/assets/stylesheets/atoms/_base.scss
+++ b/assets/stylesheets/atoms/_base.scss
@@ -143,5 +143,9 @@ strong {
 }
 
 small {
-  font-size: $font-size-sm;
+  font-size: $h6-font-size-sm;
+
+  @include tablet {
+    font-size: $font-size-sm
+  }
 }
