--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -13,9 +13,16 @@ Praxis Logo & Burguer Menu
 
             .navbar-brand {
                 background-color: $black;
-                width: $navbar-height * 2;
-                height: $navbar-height;
-                padding: 2.5rem 3.4rem;
+                width: $navbar-height-sm * 2;
+                height: $navbar-height-sm;
+                padding: 1.8rem 2rem;
+
+                @include tablet{
+                    width: $navbar-height*2;
+                    height: $navbar-height;
+                    padding: 2.5rem 3.4rem;
+                }
+
 
                 img {
                     max-width: 100%;
@@ -25,9 +32,14 @@ Praxis Logo & Burguer Menu
             .burger-menu {
                 background-color: $white;
                 position: relative;
-                height: $navbar-height;
-                width: $navbar-height;
+                height: $navbar-height-sm;
+                width: $navbar-height-sm;
                 z-index: 20;
+
+                @include tablet{
+                    width: $navbar-height;
+                    height: $navbar-height;
+                }
 
                 &:hover {
                     @include transition(all, 0.4);
@@ -45,8 +57,12 @@ Praxis Logo & Burguer Menu
 
                 .bar {
                     @include transition(all, 0.3);
-                    margin: auto 2.2rem;
+                    margin: auto 1.4rem;
                     width: 3rem;
+
+                    @include tablet{
+                        margin: auto 2.2rem;
+                    }
 
                     &,
                     &::before,
@@ -100,21 +116,32 @@ Praxis Logo & Burguer Menu
         .shopping-menu {
             @include position(fixed, 0, null, null, 0);
             background-color: $black;
-            width: $navbar-height;
-            height: $navbar-height;
-            padding: 3rem;
+            width: $navbar-height-sm;
+            height: $navbar-height-sm;
+            padding: 2rem;
             z-index: 10;
+
+            @include tablet {
+                width: $navbar-height;
+                height: $navbar-height;
+                padding: 3rem;
+            }
 
             &.filled-cart {
                 &:after {
                     content: '';
-                    @include position(absolute, 2.2rem, null, null, 2rem);
+                    @include position(absolute, 1.2rem, null, null, 1.2rem);
                     width: 1.6rem;
                     height: 1.6rem;
                     background-color: $gold;
                     border: 3px solid $black;
                     border-radius: 50%;
                     z-index: 11;
+
+                    @include tablet {
+                        top: 2rem;
+                        right: 2.2rem;
+                    }
                 }
             }
 
@@ -333,7 +360,11 @@ Language
             .lang-links-container {
                 position: absolute;
                 right: 2rem;
-                top: 4rem;
+                top: 3rem;
+
+                @include tablet {
+                    top: 4rem;
+                }
 
                 @include desktop {
                     right: 6rem;
