--- a/assets/stylesheets/resources/_variables.scss
+++ b/assets/stylesheets/resources/_variables.scss
@@ -39,6 +39,7 @@ $btn-font-size: $font-size-baseline * 1.125; /* 18px */
 //----- NAVBAR -----//
 
 $navbar-height: 9rem;
+$navbar-height-sm: 7rem;
 
 
 /*
