--- a/assets/stylesheets/resources/_wrappers.scss
+++ b/assets/stylesheets/resources/_wrappers.scss
@@ -15,6 +15,18 @@
     padding: 9rem 8rem 8rem 8rem;
   }
 
+  .w-50 {
+    width: 100%;
+
+    @include tablet {
+      width: 75%;
+    }
+
+    @include desktop {
+      width: 50%;
+    }
+  }
+
   img {
     &.bg-image{
       @include position(absolute, 0, 0);
