--- a/assets/stylesheets/blocs/_cookie-modal.scss
+++ b/assets/stylesheets/blocs/_cookie-modal.scss
@@ -26,3 +26,71 @@
         }
     }
 }
+
+#popup {
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    display: none;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.96);
+
+    .age-verification-window {
+        display: flex;
+        align-items: center;
+        width: 90vw;
+        min-height: calc(100% - (1.75rem * 2));
+        margin: 1.75rem auto;
+
+        @include tablet {
+            width: 65rem;
+        }
+
+        .age-verification-content {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 36rem;
+            pointer-events: auto;
+            border-radius: 4px;
+            background: linear-gradient(164.59deg, #2a2a2a 22.3%, #131313 87.6%);
+            box-shadow: 0px 3px 60px #000000;
+            padding: 4rem 2rem 2rem 2rem;
+
+            @include tablet {
+                padding: 6rem 5rem 3rem 5rem;
+                height: 42rem;
+            }
+
+            .age-verification-title {
+                color: $gray-5;
+                margin-bottom: 4rem;
+            }
+
+            .age-verification-surtitle {
+                color: $gray-5;
+            }
+
+            .button {
+                margin: 0 1rem;
+
+                @include tablet {
+                    margin: 0 2rem;
+                }
+
+                &.button-no {
+                    background-color: $black;
+                }
+            }
+
+            .disclaimer {
+                margin-top: auto;
+                color: $gray-1;
+            }
+        }
+    }
+}
