Improve restaurant layout for takeaway

--- a/assets/stylesheets/pages/_restaurant.scss
+++ b/assets/stylesheets/pages/_restaurant.scss
@@ -5,7 +5,11 @@ MENU SECTION
 */
 
 .menu-section {
-    padding-bottom: 10rem;
+    padding-bottom: 4rem;
+
+    @include tablet {
+        padding-bottom: 8rem;
+    }
 
     .menu-dates {
         color: $gray-2;
@@ -14,10 +18,6 @@ MENU SECTION
 
     .menu-wrapper {
         padding: 8rem 2rem 2rem 2rem;
-
-        @include phablet {
-            padding: 8rem 4rem 4rem 4rem;
-        }
 
         @include tablet {
             padding: 9rem 6rem 6rem 6rem;
@@ -70,10 +70,6 @@ MENU SECTION
         }
     }
 
-    .sided-plate-col {
-        /* Do this element sticky in mobile */
-    }
-
     .sided-plate-wrapper {
         margin-top: 4rem;
         height: 100%;
@@ -84,7 +80,9 @@ MENU SECTION
         }
 
         .sided-plate {
-            position: relative;
+            position: -webkit-sticky;
+            position: sticky;
+            top: 4rem;
             z-index: 4;
         }
 
@@ -244,6 +242,7 @@ GALLERY SECTION
 
 .gallery-section {
     padding-bottom: 10rem;
+    border-bottom: $light-border;
 }
 
 
@@ -254,14 +253,16 @@ TAKEAWAY SECTION
 */
 
 .takeaway-section {
-    border-bottom: $light-border;
-
     .takeaway {
         &-wrapper {
-            padding: 10rem 2rem 8rem 2rem;
+            padding: 2rem 2rem 4rem 2rem;
 
             @include tablet {
-                padding: 15rem 8rem 15rem 8rem;
+                padding: 0rem 6rem 6rem 6rem;
+            }
+
+            @include desktop {
+                padding: 0rem 8rem 10rem 8rem;
             }
         }
 
