--- a/assets/stylesheets/pages/_brewery.scss
+++ b/assets/stylesheets/pages/_brewery.scss
@@ -5,6 +5,10 @@
             margin-top: 6rem;
 
             @include tablet {
+                margin-top: 4rem;
+            }
+
+            @include desktop {
                 margin-top: 0;
             }
         }
@@ -29,17 +33,17 @@
 
         &-beer {
             position: absolute;
-            right: -15rem;
+            right: -10rem;
             bottom: 5rem;
 
             @include tablet {
                 right: -5rem;
-                bottom: 20rem;
+                bottom: 15rem;
             }
 
             @include desktop {
                 right: 25rem;
-                bottom: 8rem;
+                bottom: 5rem;
             }
         }
         
