--- a/assets/stylesheets/blocs/_main.scss
+++ b/assets/stylesheets/blocs/_main.scss
@@ -23,3 +23,21 @@ section {
        padding-bottom: 3.6rem;
    }
 }
+
+.beer-ratings-wrapper {
+    @include position(absolute, null, null, 0, 0);
+    z-index: 3;
+    background-color: $black;
+    width: $navbar-height*2;
+    height: $navbar-height;
+    padding: 2.5rem 3.4rem;
+    display: none;
+
+    @include tablet{
+        display: flex;
+    }
+
+    img {
+        height: 4rem;
+    }
+}
