add logo to footer

--- a/assets/stylesheets/blocs/_footer.scss
+++ b/assets/stylesheets/blocs/_footer.scss
@@ -68,8 +68,8 @@
                 font-family: $font-family-sans-serif-med;
                 font-size: $font-size-sm;
 
-                &:visited {
-                    color: $white;
+                img {
+                    margin-bottom: -3px;
                 }
             }
         }
