--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -152,13 +152,14 @@ Praxis Logo & Burguer Menu
 
         .phonenumber-menu {
             @include position(fixed, 0, null, null, $navbar-height);
-            background-color: $white;
-            color: $black;
+            background-color: $black;
+            color: $gray-5;
             display: none;
             width: 22rem;
             height: $navbar-height;
             padding: 3rem;
             z-index: 5;
+            border-right: 1px solid $dark;
 
             @include tablet {
                 display: block;
