--- a/assets/stylesheets/blocs/_navbar.scss
+++ b/assets/stylesheets/blocs/_navbar.scss
@@ -262,6 +262,7 @@ Navigation Modal
 
                     .menu-link {
                         @extend h3;
+                        font-size: 8.2rem;
                         color: $white;
                         display: block;
                         padding: 1rem 0;
