--- a/assets/stylesheets/resources/_mixins.scss
+++ b/assets/stylesheets/resources/_mixins.scss
@@ -4,6 +4,17 @@ Fonts auxiliar mixins
 --------------------------------------------------------------------------------
 */
 
+@mixin responsive_font($min, $max) {
+  font-size: #{$min}rem;
+
+  @include resolution(600px) {
+    font-size: calc(#{$min}rem + ((#{$max} * 10) - (#{$min} * 10)) * ((100vw - 650px) / 550));
+  }
+  @include resolution(1200px) {
+    font-size: #{$max}rem;
+  }
+}
+
 
 /*
 --------------------------------------------------------------------------------
